[gd_scene load_steps=12 format=3 uid="uid://rgxs2vwe0xsu"]

[ext_resource type="Script" uid="uid://cpdvsfk14lhlq" path="res://Scripts/Puntaje.gd" id="1_3atru"]
[ext_resource type="Texture2D" uid="uid://dfqhr1lcxhukc" path="res://Sprites/global/Background_game.png" id="2_55kb0"]
[ext_resource type="Texture2D" uid="uid://dt4d5ponwsp7v" path="res://Sprites/LetreroPuntaje.png" id="3_exl1b"]
[ext_resource type="Texture2D" uid="uid://b6adqoc1dhqe5" path="res://Sprites/Hojas en letrero.png" id="4_ivo1u"]
[ext_resource type="Texture2D" uid="uid://btk1xkyf2fyr8" path="res://Sprites/buttons/Boton_Next.png" id="5_vii3a"]
[ext_resource type="Texture2D" uid="uid://dysynh8dy4kgi" path="res://Sprites/global/texto felicitaciones.png" id="6_ar3uk"]
[ext_resource type="FontFile" uid="uid://bl1il7t5684pv" path="res://Fonts/Minecraft.ttf" id="7_27etb"]
[ext_resource type="AudioStream" uid="uid://bfv3xkxn5hs8y" path="res://Sonido/subidaPuntaje.mp3" id="8_dgt6n"]

[sub_resource type="LabelSettings" id="LabelSettings_htnof"]
font = ExtResource("7_27etb")
font_size = 46
font_color = Color(0.568627, 0.282353, 0.152941, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ljllh"]
font = ExtResource("7_27etb")
font_size = 46
font_color = Color(0.239216, 0.682353, 0.101961, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dxgvb"]
font = ExtResource("7_27etb")
font_size = 46
font_color = Color(0.239216, 0.682353, 0.101961, 1)

[node name="PuntajeScreen" type="Node2D"]
script = ExtResource("1_3atru")
metadata/_edit_vertical_guides_ = [640.0, 883.0, 170.0, 907.0, 219.0]
metadata/_edit_horizontal_guides_ = [416.0, 489.0, 567.0]

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(638.222, 453.457)
scale = Vector2(0.212259, 0.211176)
texture = ExtResource("2_55kb0")
metadata/_edit_lock_ = true

[node name="Node2D2" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Node2D2"]
position = Vector2(639, 470)
scale = Vector2(0.349277, 0.30591)
texture = ExtResource("3_exl1b")
metadata/_edit_lock_ = true

[node name="HojasEnLetrero" type="Sprite2D" parent="Node2D2/Sprite2D"]
position = Vector2(-4.32434, -12.9528)
scale = Vector2(0.902171, 1.10958)
texture = ExtResource("4_ivo1u")
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="."]
offset_left = 550.0
offset_top = 619.0
offset_right = 730.0
offset_bottom = 697.0
mouse_default_cursor_shape = 2
icon = ExtResource("5_vii3a")
flat = true
expand_icon = true
metadata/_edit_lock_ = true

[node name="TextoFelicitaciones" type="Sprite2D" parent="."]
position = Vector2(640, 303)
scale = Vector2(0.316147, 0.404145)
texture = ExtResource("6_ar3uk")
metadata/_edit_lock_ = true

[node name="Puntaje" type="Label" parent="."]
offset_left = 858.0
offset_top = 381.0
offset_right = 910.0
offset_bottom = 428.0
text = "00"
label_settings = SubResource("LabelSettings_htnof")

[node name="NewBestLabel" type="Label" parent="."]
offset_left = 943.0
offset_top = 371.0
offset_right = 1095.0
offset_bottom = 418.0
label_settings = SubResource("LabelSettings_htnof")

[node name="BestNameDialog" type="AcceptDialog" parent="."]
title = "New Best Score"
position = Vector2i(0, 36)
size = Vector2i(377, 158)
visible = true
ok_button_text = "Save"
dialog_text = "You got a new best score!
Write your name:"

[node name="NameEdit" type="LineEdit" parent="BestNameDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 369.0
offset_bottom = 109.0
placeholder_text = "Enter your name"

[node name="Puntaje2" type="Label" parent="."]
offset_left = 830.0
offset_top = 454.0
offset_right = 885.0
offset_bottom = 501.0
text = "+0"
label_settings = SubResource("LabelSettings_ljllh")

[node name="Puntaje3" type="Label" parent="."]
offset_left = 830.0
offset_top = 533.0
offset_right = 885.0
offset_bottom = 580.0
text = "+0"
label_settings = SubResource("LabelSettings_dxgvb")

[node name="Perfecto" type="Label" parent="."]
offset_left = 303.0
offset_top = 532.0
offset_right = 355.0
offset_bottom = 579.0
text = "Perfecto"
label_settings = SubResource("LabelSettings_htnof")

[node name="Bonus de velocidad" type="Label" parent="."]
offset_left = 305.0
offset_top = 454.0
offset_right = 733.0
offset_bottom = 501.0
text = "Muy veloz"
label_settings = SubResource("LabelSettings_htnof")

[node name="Tu puntaje" type="Label" parent="."]
offset_left = 304.0
offset_top = 381.0
offset_right = 732.0
offset_bottom = 428.0
text = "Tu puntaje"
label_settings = SubResource("LabelSettings_htnof")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_dgt6n")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="confirmed" from="BestNameDialog" to="." method="_on_BestNameDialog_confirmed"]
